--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "title":"Pan's Blog",
+    "title":"Lin's Blog",
     "subTitle":"秉忠贞之志 守谦退之节",
     "avatarUrl":"https://avatars.githubusercontent.com/u/150444021?v=4",
     "GMEEK_VERSION":"last",
